frontend/test/should_pass/attrib_092.grg
using attrib_model_092;

rule dummy {
  replace {
    EEE:AAA;
    eval { EEE.EEE = EEE::EEE; }
  }
}
