frontend/test/should_fail/attrib_091.grg
using attrib_model_091;

rule dummy {
  replace {
    a:AAA;
    eval { a.value = AAA::e1; }
  }
}
